# flutter-pixelmatching

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  README.md  init.sh  pixelmatching  pubspec.yaml
.cache/clangd/index/: main.cpp.81955C51E51A9B0F.idx
.github/workflows/: main.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/io/lowapple/flutter/plugin/pixelmatching/flutter_pixelmatching/: FlutterPixelMatchingPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/io/lowapple/flutter/plugin/pixelmatching/example/: MainActivity.kt
example/android/app/src/main/kotlin/io/lowapple/flutter/plugin/pixelmatching/flutter_pixelmatching_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  matching_view.dart
example/test/: widget_test.dart
ios/: flutter_pixelmatching.modulemap  flutter_pixelmatching.podspec
ios/Classes/: FlutterPixelmatchingPlugin.swift  ImageConverter.cpp  ImageConverter.hpp  ImageProcessor.cpp  ImageProcessor.hpp  PixelMatching.cpp  StateCode.hpp  common.hpp  debug_logger.cpp  debug_logger.hpp  image_cache.cpp  image_cache.hpp  image_converter.cpp  image_converter.hpp  image_processor.cpp  image_processor.hpp  opencv_pixelmatching.cpp  opencv_pixelmatching.h  pixel_matching.cpp  pixel_matching.h
ios/Classes/src/: CMakeLists.txt  ImageCompare.cpp  ImageConverter.cpp  ImageConverter.h  ImageProcessor.cpp  ImageProcessor.h  PixelMatching.cpp  PixelMatching.h
lib/: flutter_pixelmatching.dart  flutter_pixelmatching_bindings.dart  flutter_pixelmatching_method_channel.dart  flutter_pixelmatching_platform_interface.dart
lib/src/: pixelmatching.dart  pixelmatching_bindings.dart  pixelmatching_client.dart  pixelmatching_converter.dart  pixelmatching_state.dart
lib/utils/: camera_image.dart
output/: main
output/main.dSYM/Contents/Resources/DWARF/: main
pixelmatching/: Constants.h  DebugLogger.h  ImageCompare.cpp  ImageConverter.cpp  ImageProcessor.cpp  ImageProcessor.h  PixelMatching.cpp  PixelMatching.h  common.h  image_converter.hpp  image_processor.hpp  pixel_matching.cpp  state_code.hpp
pixelmatching_sample/: CMakeLists.txt  PixelMatchingMain.cpp
pixelmatching_tester/: CMakeLists.txt  main.cpp
pixelmatching_tests/: CMakeLists.txt  main.cpp
scripts/: clean.sh  package_release.sh  setup.sh  setup_ios.sh
src/: Constants.h  DebugLogger.cpp  ImageCompare.cpp  ImageCompare.h  ImageConverter.cpp  ImageConverter.h  ImageProcessor.h  PixelMatching.cpp  YuvToRGB.cpp  YuvToRGB.h
test/: flutter_pixelmatching_method_channel_test.dart  flutter_pixelmatching_test.dart
tests/: CMakeLists.txt  main.cpp
