cmake_minimum_required(VERSION 3.25)
set(CMAKE_OSX_ARCHITECTURES "arm64" CACHE INTERNAL "" FORCE)
project(example)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
include_directories(../src)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(example main.cpp)

target_link_libraries(example  ${OpenCV_LIBS})